descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2011-11-XX  Release 7.21.X                                     ---
----------------------------------------------------------------------

* batch script shortcuts now set PATH on Windows - Sean Morrison
* fixed g-obj error when exporting facets - Christopher Pitts
* added length parameter documentation for 'coil' command - Cliff Yapp
* improved performance of boolean evaluations - Richard Weiss
* improved boolean evaluation converting to polygons - Richard Weiss
* ported the obj-g geometry importer to Windows - Nicholas Reed
* improved import robustness and parsing of OBJ geometry files
	- Nicholas Reed, Richard Weiss, Mike Tegtmeyer
* added new physics 'simulate' command to mged/archer - Abhijit Nandy


----------------------------------------------------------------------
--- 2011-10-30  Release 7.20.4                                     ---
----------------------------------------------------------------------

* added lighting model visualization options for archer - Bob Parker
* reid command now takes optional -n "incr by" value - Erik Greenwald
* reid command now returns the last region ID set - Erik Greenwald
* improved nirt support for non-UNIX-style text files - Sean Morrison
* added new relos thickness reassignment command to mged - Carl Moore
* support for loading archer plugins with spaces in name - Bob Parker
* added 'exists' object detection command to mged/archer - Cliff Yapp
* added archer BoT split/flip/sync surface cleanup panel - Bob Parker
* added new g-dot exporter for hierarchy visualization - Sean Morrison
* improved g-vrml successful exporting and reporting - Richard Weiss
* added -b BoT dump and -e evaluation option to g-vrml - Richard Weiss
* improved obj-g polygonal import - Nicholas Reed, Richard Weiss